--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "scripts": {
     "docs:build": "vitepress build docs",
     "docs:dev": "vitepress dev docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "docs:deploy": "vitepress build docs && rsync -avz --progress --chmod=755 ./docs/.vitepress/dist root@$SERVER_IP:/www/wwwroot/butterfly.zhheo.com/"
   },
   "devDependencies": {
-    "vitepress": "^1.0.0-rc.9",
-    "vuepress": "^1.9.9"
+    "vitepress": "^1.5.0"
   }
 }
